--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
           <div class="row">
             <div class="large-12 columns">
               <label>Select Box</label>
-              <select>
+              <select data-select data-placeholder="Choose an option...">
                 <option value="husker">Husker</option>
                 <option value="starbuck">Starbuck</option>
                 <option value="hotdog">Hot Dog</option>
@@ -161,8 +161,10 @@
     </div>
 
     <script src="bower_components/jquery/dist/jquery.js"></script>
-    <script src="bower_components/what-input/dist/what-input.js"></script>
-    <script src="bower_components/foundation-sites/dist/js/foundation.js"></script>
+    <script src="bower_components/what-input/dist/what-input.js"></script><script src="bower_components/perfect-scrollbar/js/perfect-scrollbar.jquery.min.js"></script>
+    <script src="bower_components/foundation-sites/dist/js/foundation.min.js"></script>
+    <script src="bower_components/foundation-perfect-scrollbar/dist/js/foundation.perfectScrollbar.min.js"></script>
+    <script src="bower_components/foundation-select/dist/js/foundation.select.min.js"></script>
     <script src="js/app.js"></script>
   </body>
 </html>
