--- a/foundation-plugins/select/index.html
+++ b/foundation-plugins/select/index.html
@@ -59,14 +59,12 @@
 </div>-->
 
 <main class="row">
-    <div class="medium-10 large-8 medium-offset-1 large-offset-2 columns">
-        <div class="callout">
-            <h2 class="alert">Foundation Select<br>
+    <div class="columns">
+            <h1>Foundation Select<br>
                 <small>Try the select plugin for Foundation 6!</small>
-            </h2>
+            </h1>
             <p>
-                This plugin makes it easy create styleable select dropdowns in Foundation.<br>
-                More details on <a href="https://github.com/samuelmc/foundation-select">Github</a>
+                This plugin makes it easy create styleable select dropdowns in Foundation.
             </p>
             <form>
                 <div class="row">
@@ -106,7 +104,7 @@
                         </select>
                     </div>
                 </div>
-            </form><!--
+            </form>
             <pre>
                 <code class="lang-html">&lt;select data-select&gt;
     &lt;option value=""&gt;Choose an option&lt;/option&gt;
@@ -120,9 +118,8 @@
     &lt;option value="2"&gt;Option 2&lt;/option&gt;
     ...
 &lt;/select&gt;</code>
-            </pre>-->
+            </pre>
         </div>
-    </div>
 </main>
 
 <script src="/bower_components/jquery/dist/jquery.js"></script>
