--- a/foundation-plugins/select/index.html
+++ b/foundation-plugins/select/index.html
@@ -9,13 +9,13 @@
     <link rel="stylesheet" href="/bower_components/highlight-js/src/styles/github.css">
 </head>
 <body>
-<!--<div class="top-bar">
+<div class="top-bar">
     <div class="row column">
         <div class="top-bar-title">
             <div data-responsive-toggle="responsive-menu" data-hide-for="medium" class="responsive-menu-toggler">
                 <button class="menu-icon dark" type="button" data-toggle></button>
             </div>
-            <strong>Samuel Moncarey</strong>
+            <strong><a href="/">Samuel Moncarey</a></strong>
         </div>
 
         <div id="responsive-menu">
@@ -26,21 +26,7 @@
                             <a>Foundation plugins</a>
                             <ul class="vertical menu">
                                 <li>
-                                    <a>Select</a>
-                                </li>
-                                <li>
-                                    <a>Perfect scroll</a>
-                                </li>
-                                <li>
-                                    <a>Datepicker</a>
-                                </li>
-                            </ul>
-                        </li>
-                        <li>
-                            <a>Symfony bundles</a>
-                            <ul class="vertical menu">
-                                <li>
-                                    <a>FoundationBundle</a>
+                                    <a href="/foundation-plugins/select">Select</a>
                                 </li>
                             </ul>
                         </li>
@@ -48,15 +34,12 @@
                 </div>
                 <div class="top-bar-right">
                     <ul class="vertical medium-horizontal menu">
-                        <li>
-                            <a>About me</a>
-                        </li>
                     </ul>
                 </div>
             </div>
         </div>
     </div>
-</div>-->
+</div>
 
 <main class="row">
     <div class="columns">
