--- a/foundation-plugins/select/index.html
+++ b/foundation-plugins/select/index.html
@@ -49,7 +49,8 @@
         <p>
             This plugin makes it easy create styleable select dropdowns in Foundation.
         </p>
-        <pre><code class="lang-html">&lt;select data-select&gt;
+        <pre><code class="lang-html">&lt;label for="basic-select"&gt;Basic select&lt;/label&gt;
+&lt;select id="basic-select" data-select=""&gt;
     &lt;option value=""&gt;Choose an option&lt;/option&gt;
     &lt;option value="1"&gt;Option 1&lt;/option&gt;
     &lt;option value="2"&gt;Option 2&lt;/option&gt;
