--- a/foundation-plugins/select/index.html
+++ b/foundation-plugins/select/index.html
@@ -50,7 +50,7 @@
             This plugin makes it easy create styleable select dropdowns in Foundation.
         </p>
         <pre><code class="lang-html">&lt;label for="basic-select"&gt;Basic select&lt;/label&gt;
-&lt;select id="basic-select" data-select=""&gt;
+&lt;select id="basic-select" data-select&gt;
     &lt;option value=""&gt;Choose an option&lt;/option&gt;
     &lt;option value="1"&gt;Option 1&lt;/option&gt;
     &lt;option value="2"&gt;Option 2&lt;/option&gt;
@@ -66,7 +66,7 @@
             <div class="row">
                 <div class="medium-6 column">
                     <label for="basic-select">Basic select</label>
-                    <select id="basic-select" data-select="">
+                    <select id="basic-select" data-select>
                         <option value="">Choose an option...</option>
                         <option value="1">Option 1</option>
                         <option value="2">Option 2</option>
@@ -84,7 +84,7 @@
                 </div>
                 <div class="medium-6 column">
                     <label for="multiple-select">Multiple select</label>
-                    <select id="multiple-select" data-select="" multiple size="6">
+                    <select id="multiple-select" data-select multiple size="6">
                         <option value="1">Option 1</option>
                         <option value="2">Option 2</option>
                         <option value="3">Option 3</option>
