--- a/foundation-plugins/select/index.html
+++ b/foundation-plugins/select/index.html
@@ -51,8 +51,9 @@
         </p>
         <div class="row">
             <div class="medium-8 column">
-                <pre><code class="lang-html">&lt;label for="basic-select"&gt;Basic select&lt;/label&gt;
-&lt;select id="basic-select" data-select&gt;
+                <span>Basic example</span>
+                <pre><code class="lang-html">&lt;label for="select-1"&gt;Select&lt;/label&gt;
+&lt;select id="select-1" data-select&gt;
     &lt;option value=""&gt;Choose an option&lt;/option&gt;
     &lt;option value="1"&gt;Option 1&lt;/option&gt;
     &lt;option value="2"&gt;Option 2&lt;/option&gt;
