--- a/foundation-plugins/select/index.html
+++ b/foundation-plugins/select/index.html
@@ -111,6 +111,9 @@
                 </form>
             </div>
         </div>
+        <h2>Installation</h2>
+        <strong>With bower:</strong>
+        <pre><code class="lang-shell">bower install --save foundation-select</code></pre>
     </div>
 </main>
 
