--- a/foundation-plugins/select/index.html
+++ b/foundation-plugins/select/index.html
@@ -65,8 +65,7 @@
     &lt;option value="1"&gt;Option 1&lt;/option&gt;
     &lt;option value="2"&gt;Option 2&lt;/option&gt;
     ...
-&lt;/select&gt;
-                </code></pre>
+&lt;/select&gt;</code></pre>
             </div>
             <div class="column">
                 <form>
@@ -113,7 +112,8 @@
         </div>
         <h2>Installation</h2>
         <strong>With bower:</strong>
-        <pre><code class="lang-shell">bower install --save foundation-select</code></pre>
+        <pre><code class="lang-shell">
+bower install --save foundation-select</code></pre>
     </div>
 </main>
 
