--- a/foundation-plugins/select/index.html
+++ b/foundation-plugins/select/index.html
@@ -112,7 +112,7 @@
         </div>
         <h2>Installation</h2>
         <strong>With bower:</strong>
-        <pre><code class="lang-shell">
+        <pre><code class="lang-bash">
 bower install --save foundation-select</code></pre>
     </div>
 </main>
