--- a/foundation-plugins/select/index.html
+++ b/foundation-plugins/select/index.html
@@ -112,8 +112,31 @@
         </div>
         <h2>Installation</h2>
         <strong>With bower:</strong>
-        <pre><code class="lang-bash">
-bower install --save foundation-select</code></pre>
+        <pre><code class="lang-bash">bower install --save foundation-select</code></pre>
+        <pre><code class="lang-html">&lt;link rel="stylesheet" type="text/css" href="bower_components/foundation-sites/dist/css/foundation.min.css"&gt;
+&lt;link rel="stylesheet" type="text/css" href="bower_components/foundation-perfect-scrollbar/dist/css/foundation-perfect-scrollbar.min.css"&gt;
+&lt;link rel="stylesheet" type="text/css" href="bower_components/foundation-select/dist/css/foundation-select.min.css"&gt;
+&lt;link rel="stylesheet" type="text/css" href="bower_components/font-awesome/css/font-awesome.min.css"&gt;
+...
+&lt;script src="bower_components/jquery/dist/jquery.js"&gt;&lt;/script&gt;
+&lt;script src="bower_components/what-input/dist/what-input.js"&gt;&lt;/script&gt;&lt;script src="bower_components/perfect-scrollbar/js/perfect-scrollbar.jquery.min.js"&gt;&lt;/script&gt;
+&lt;script src="bower_components/foundation-sites/dist/js/foundation.min.js"&gt;&lt;/script&gt;
+&lt;script src="bower_components/foundation-perfect-scrollbar/dist/js/foundation.perfectScrollbar.min.js"&gt;&lt;/script&gt;
+&lt;script src="bower_components/foundation-select/dist/js/foundation.select.min.js"&gt;&lt;/script&gt;</code></pre>
+        <pre><code class="lang-js">var gulp = require('gulp');
+var $    = require('gulp-load-plugins')();
+
+var sassPaths = [
+    'bower_components/normalize.scss/sass',
+    'bower_components/foundation-sites/scss',
+    'bower_components/foundation-perfect-scrollbar/src/scss/plugin',
+    'bower_components/foundation-select/src/scss/plugin',
+    'bower_components/motion-ui/src',
+    'bower_components/font-awesome/scss'
+];
+
+gulp.task('sass', function() {
+    ...</code></pre>
     </div>
 </main>
 
