--- a/foundation-plugins/select/index.html
+++ b/foundation-plugins/select/index.html
@@ -44,14 +44,14 @@
 <main class="row">
     <div class="columns">
         <h1>Foundation Select<br>
-            <small>Slick, intuitive and styleable select dropdowns.</small>
+            <small>Slick, intuitive and styleable select plugin.</small>
         </h1>
         <p>
             This plugin makes it easy create styleable select dropdowns in Foundation.
         </p>
         <div class="row">
             <div class="column">
-                <pre><code class="html">&lt;label for="select-1"&gt;Basic elect&lt;/label&gt;
+                <pre><code class="html">&lt;label for="select-1"&gt;Basic select&lt;/label&gt;
 &lt;select id="select-1" data-select&gt;
     &lt;option value=""&gt;Choose an option&lt;/option&gt;
     &lt;option value="1"&gt;Option 1&lt;/option&gt;
@@ -111,28 +111,27 @@
             </div>
         </div>
         <h2>Installation</h2>
-        <strong>With bower:</strong>
+        <h3>Download</h3>
         <pre><code class="bash">bower install --save foundation-select</code></pre>
+        <h3>Install styles</h3>
+        <strong>Basic setup</strong>
+        <p>If you are not making use of Foundation's powerful scss, include the required css to your html file.</p>
         <pre><code class="html">&lt;link rel="stylesheet" type="text/css" href="bower_components/foundation-sites/dist/css/foundation.min.css"&gt;
 &lt;link rel="stylesheet" type="text/css" href="bower_components/foundation-perfect-scrollbar/dist/css/foundation-perfect-scrollbar.min.css"&gt;
 &lt;link rel="stylesheet" type="text/css" href="bower_components/foundation-select/dist/css/foundation-select.min.css"&gt;
-&lt;link rel="stylesheet" type="text/css" href="bower_components/font-awesome/css/font-awesome.min.css"&gt;
-...
-&lt;script src="bower_components/jquery/dist/jquery.js"&gt;&lt;/script&gt;
-&lt;script src="bower_components/what-input/dist/what-input.js"&gt;&lt;/script&gt;&lt;script src="bower_components/perfect-scrollbar/js/perfect-scrollbar.jquery.min.js"&gt;&lt;/script&gt;
-&lt;script src="bower_components/foundation-sites/dist/js/foundation.min.js"&gt;&lt;/script&gt;
-&lt;script src="bower_components/foundation-perfect-scrollbar/dist/js/foundation.perfectScrollbar.min.js"&gt;&lt;/script&gt;
-&lt;script src="bower_components/foundation-select/dist/js/foundation.select.min.js"&gt;&lt;/script&gt;</code></pre>
+&lt;link rel="stylesheet" type="text/css" href="bower_components/font-awesome/css/font-awesome.min.css"&gt;</code></pre>
+        <strong>Advanced setup</strong>
+        <p>To include the styles in scss, add the required paths to your gulpfile.</p>
         <pre><code class="js">var gulp = require('gulp');
 var $    = require('gulp-load-plugins')();
 
 var sassPaths = [
     'bower_components/normalize.scss/sass',
     'bower_components/foundation-sites/scss',
-    'bower_components/foundation-perfect-scrollbar/src/scss/plugin',
-    'bower_components/foundation-select/src/scss/plugin',
     'bower_components/motion-ui/src',
-    'bower_components/font-awesome/scss'
+    'bower_components/font-awesome/scss',
+    'bower_components/foundation-perfect-scrollbar/src/scss/plugin',
+    'bower_components/foundation-select/src/scss/plugin'
 ];
 
 gulp.task('sass', function() {
@@ -142,6 +141,13 @@ $select-border: $input-border !default;
 $select-color: $input-color !default;
 $select-dropdown-height: rem-calc(300);</code></pre>
     </div>
+
+        <pre><code>&lt;script src="bower_components/jquery/dist/jquery.js"&gt;&lt;/script&gt;
+&lt;script src="bower_components/what-input/dist/what-input.js"&gt;&lt;/script&gt;&lt;script src="bower_components/perfect-scrollbar/js/perfect-scrollbar.jquery.min.js"&gt;&lt;/script&gt;
+&lt;script src="bower_components/foundation-sites/dist/js/foundation.min.js"&gt;&lt;/script&gt;
+&lt;script src="bower_components/foundation-perfect-scrollbar/dist/js/foundation.perfectScrollbar.min.js"&gt;&lt;/script&gt;
+&lt;script src="bower_components/foundation-select/dist/js/foundation.select.min.js"&gt;&lt;/script&gt;</code></pre>
+
 </main>
 
 <script src="/bower_components/jquery/dist/jquery.js"></script>
