--- a/foundation-plugins/select/index.html
+++ b/foundation-plugins/select/index.html
@@ -28,6 +28,9 @@
                                 <li>
                                     <a href="/foundation-plugins/select">Select</a>
                                 </li>
+                                <li>
+                                    <a href="/foundation-plugins/perfect-scrollbar">Perfect scrollbar</a>
+                                </li>
                             </ul>
                         </li>
                     </ul>
