--- a/index.html
+++ b/index.html
@@ -5,17 +5,17 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Samuel Moncarey</title>
-    <link rel="stylesheet" href="css/app.css">
-    <link rel="stylesheet" href="bower_components/highlight-js/src/styles/github.css">
+    <link rel="stylesheet" href="/css/app.css">
+    <link rel="stylesheet" href="/js/vendor/highlight/styles/github.css">
 </head>
 <body>
-<!--<div class="top-bar">
+<div class="top-bar">
     <div class="row column">
         <div class="top-bar-title">
             <div data-responsive-toggle="responsive-menu" data-hide-for="medium" class="responsive-menu-toggler">
                 <button class="menu-icon dark" type="button" data-toggle></button>
             </div>
-            <strong>Samuel Moncarey</strong>
+            <strong><a href="/">Samuel Moncarey</a></strong>
         </div>
 
         <div id="responsive-menu">
@@ -26,21 +26,10 @@
                             <a>Foundation plugins</a>
                             <ul class="vertical menu">
                                 <li>
-                                    <a>Select</a>
+                                    <a href="/foundation-plugins/select">Select</a>
                                 </li>
                                 <li>
-                                    <a>Perfect scroll</a>
-                                </li>
-                                <li>
-                                    <a>Datepicker</a>
-                                </li>
-                            </ul>
-                        </li>
-                        <li>
-                            <a>Symfony bundles</a>
-                            <ul class="vertical menu">
-                                <li>
-                                    <a>FoundationBundle</a>
+                                    <a href="/foundation-plugins/perfect-scrollbar">Perfect scrollbar</a>
                                 </li>
                             </ul>
                         </li>
@@ -48,15 +37,12 @@
                 </div>
                 <div class="top-bar-right">
                     <ul class="vertical medium-horizontal menu">
-                        <li>
-                            <a>About me</a>
-                        </li>
                     </ul>
                 </div>
             </div>
         </div>
     </div>
-</div>-->
+</div>
 
 <main class="row">
     <div class="medium-10 large-8 medium-offset-1 large-offset-2 columns">
@@ -106,33 +92,19 @@
                         </select>
                     </div>
                 </div>
-            </form><!--
-            <pre>
-                <code class="lang-html">&lt;select data-select&gt;
-    &lt;option value=""&gt;Choose an option&lt;/option&gt;
-    &lt;option value="1"&gt;Option 1&lt;/option&gt;
-    &lt;option value="2"&gt;Option 2&lt;/option&gt;
-    ...
-&lt;/select&gt;
-
-&lt;select data-select multiple size="6"&gt;
-    &lt;option value="1"&gt;Option 1&lt;/option&gt;
-    &lt;option value="2"&gt;Option 2&lt;/option&gt;
-    ...
-&lt;/select&gt;</code>
-            </pre>-->
+            </form>
         </div>
     </div>
 </main>
 
-<script src="bower_components/jquery/dist/jquery.js"></script>
-<script src="bower_components/what-input/dist/what-input.js"></script>
-<script src="bower_components/perfect-scrollbar/js/perfect-scrollbar.jquery.min.js"></script>
-<script src="bower_components/foundation-sites/dist/js/foundation.min.js"></script>
-<script src="bower_components/foundation-perfect-scrollbar/dist/js/foundation.perfectScrollbar.min.js"></script>
-<script src="bower_components/foundation-select/dist/js/foundation.select.min.js"></script>
-<script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.10.0/highlight.min.js"></script>
+<script src="/bower_components/jquery/dist/jquery.js"></script>
+<script src="/bower_components/what-input/dist/what-input.js"></script>
+<script src="/bower_components/perfect-scrollbar/js/perfect-scrollbar.jquery.min.js"></script>
+<script src="/bower_components/foundation-sites/dist/js/foundation.min.js"></script>
+<script src="/bower_components/foundation-perfect-scrollbar/dist/js/foundation.perfectScrollbar.min.js"></script>
+<script src="/bower_components/foundation-select/dist/js/foundation.select.min.js"></script>
+<script src="/js/vendor/highlight/highlight.pack.js"></script>
 <script>hljs.initHighlightingOnLoad();</script>
-<script src="js/app.js"></script>
+<script src="/js/app.js"></script>
 </body>
 </html>
