--- a/foundation-plugins/select/index.html
+++ b/foundation-plugins/select/index.html
@@ -116,7 +116,7 @@
         <h2>Installation</h2>
         <h3>Download</h3>
         <pre><code class="bash">bower install --save foundation-select</code></pre>
-        <h3>Install styles</h3>
+        <h3>Setup styles</h3>
         <strong>Basic setup</strong>
         <p>If you are not making use of Foundation's powerful scss, include the required css to your html file.</p>
         <pre><code class="html">&lt;link rel="stylesheet" type="text/css" href="bower_components/foundation-sites/dist/css/foundation.min.css"&gt;
@@ -139,17 +139,18 @@ var sassPaths = [
 
 gulp.task('sass', function() {
     ...</code></pre>
+        <p>Then add these settings to your _settings.scss file for customization </p>
         <pre><code class="scss">$select-background: $input-background !default;
 $select-border: $input-border !default;
 $select-color: $input-color !default;
 $select-dropdown-height: rem-calc(300);</code></pre>
-    </div>
-
+        <h3>Include scripts</h3>
         <pre><code>&lt;script src="bower_components/jquery/dist/jquery.js"&gt;&lt;/script&gt;
 &lt;script src="bower_components/what-input/dist/what-input.js"&gt;&lt;/script&gt;&lt;script src="bower_components/perfect-scrollbar/js/perfect-scrollbar.jquery.min.js"&gt;&lt;/script&gt;
 &lt;script src="bower_components/foundation-sites/dist/js/foundation.min.js"&gt;&lt;/script&gt;
 &lt;script src="bower_components/foundation-perfect-scrollbar/dist/js/foundation.perfectScrollbar.min.js"&gt;&lt;/script&gt;
 &lt;script src="bower_components/foundation-select/dist/js/foundation.select.min.js"&gt;&lt;/script&gt;</code></pre>
+    </div>
 
 </main>
 
