route all traffic to the root index.html

--- a/foundation-plugins/select/index.html
+++ b/foundation-plugins/select/index.html
@@ -167,7 +167,7 @@ $select-dropdown-height: rem-calc(300);</code></pre>
     ...
 &lt;/select&gt;</code></pre>
 
-        <p>The plugin will automaticaly initialize all the selects with foundation.</p>
+        <p>The plugin will automaticaly initialize the select dropdowns with foundation.</p>
         <pre><code class="js">$(document).foundation();</code></pre>
 
     </div>
