--- a/404.html
+++ b/404.html
@@ -6,5 +6,10 @@
 </head>
 <body>
 <h1>Custom 404</h1>
+<p>
+    <script>
+        document.writeln(location);
+    </script>
+</p>
 </body>
 </html>
