--- a/404.html
+++ b/404.html
@@ -3,13 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>404</title>
+    <script>
+        history.replaceState({}, '', '/?q=' + location.pathname);
+        //location = '/?q=' + location.pathname
+    </script>
 </head>
 <body>
-<h1>Custom 404</h1>
-<p>
-    <script>
-        document.writeln(location);
-    </script>
-</p>
 </body>
 </html>
