route all traffic to the root index.html

--- a/404.html
+++ b/404.html
@@ -5,7 +5,7 @@
     <title>404</title>
     <script>
         history.replaceState({}, '', '/?q=' + location.pathname);
-        location = '/?q=' + location.pathname
+        location = location;
     </script>
 </head>
 <body>
