--- a/index.html
+++ b/index.html
@@ -105,6 +105,7 @@
 <script src="/bower_components/foundation-select/dist/js/foundation.select.min.js"></script>
 <script src="/js/vendor/highlight/highlight.pack.js"></script>
 <script src="/js/vendor/jquery.queryString.js"></script>
+<script src="/js/vendor/jquery.delimitedString.js"></script>
 <script>hljs.initHighlightingOnLoad();</script>
 <script src="/js/app.js"></script>
 </body>
