--- a/index.html
+++ b/index.html
@@ -107,6 +107,7 @@
 <script src="/js/vendor/jquery.queryString.js"></script>
 <script src="/js/vendor/jquery.delimitedString.js"></script>
 <script>hljs.initHighlightingOnLoad();</script>
+<script src="/js/routing.js"></script>
 <script src="/js/app.js"></script>
 </body>
 </html>
