route all traffic to the root index.html

--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
     <title>Samuel Moncarey</title>
     <link rel="stylesheet" href="/css/app.css">
     <!--<link rel="stylesheet" href="/js/vendor/highlight/styles/foundation.css">-->
-    <script>
-        if (location.search == '') {
-            history.replaceState({}, '', '/?q=' + location.pathname);
-            location = location;
-        }
-    </script>
+    <!--<script>-->
+        <!--if (location.search == '') {-->
+            <!--history.replaceState({}, '', '/?q=' + location.pathname);-->
+            <!--location = location;-->
+        <!--}-->
+    <!--</script>-->
 </head>
 <body>
 <div class="top-bar">
