Navigation cache & load animations

--- a/index.html
+++ b/index.html
@@ -15,6 +15,28 @@
     <!--</script>-->
 </head>
 <body>
+
+<header>
+    <div class="title-bar" data-responsive-toggle="main-menu" data-hide-for="medium">
+        <div class="title-bar-logo">
+            <a href="/" title="Home" rel="home">
+                <img src="/themes/akkoo/assets/img/logos/akkoo-geel-enkel-logo.svg">
+            </a>
+        </div>
+        <button class="menu-icon" type="button" data-toggle="main-menu"></button>
+    </div>
+
+    <div data-ps-dynamic-container>
+        <div class="top-bar" id="main-menu" data-perfect-scrollbar data-suppress-scroll-x="true" data-scroll-y-margin-offset="1">
+            <div class="row column">
+                <div class="top-bar-left show-for-medium">
+
+                </div>
+            </div>
+        </div>
+    </div>
+</header>
+
 <div class="top-bar">
     <div class="row column">
         <div class="top-bar-title">
@@ -65,6 +87,7 @@
 <script src="/js/vendor/highlight/highlight.pack.js"></script>
 <script src="/js/vendor/jquery.queryString.js"></script>
 <script src="/js/vendor/jquery.delimitedString.js"></script>
+<script src="/js/foundation.psDynamicContainer.js"></script>
 <script src="/js/routing.js"></script>
 <script src="/js/app.js"></script>
 </body>
