--- a/index.html
+++ b/index.html
@@ -51,15 +51,15 @@
                 <div class="top-bar-left">
                     <ul class="menu" data-responsive-menu="drilldown medium-dropdown">
                         <li>
-                            <a>Foundation plugins</a>
-                            <ul class="vertical menu">
-                                <li>
-                                    <a href="/foundation-plugins/select">Select</a>
-                                </li>
-                                <li>
-                                    <a href="/foundation-plugins/perfect-scrollbar">Perfect scrollbar</a>
-                                </li>
-                            </ul>
+                            <a href="/foundation-plugins/select">Foundation Select</a>
+                            <!--<ul class="vertical menu">-->
+                                <!--<li>-->
+                                    <!--<a href="/foundation-plugins/select">Select</a>-->
+                                <!--</li>-->
+                                <!--<li>-->
+                                    <!--<a href="/foundation-plugins/perfect-scrollbar">Perfect scrollbar</a>-->
+                                <!--</li>-->
+                            <!--</ul>-->
                         </li>
                     </ul>
                 </div>
