Foundation update refactoring

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 </header>
 
 <div class="top-bar">
-    <div class="row column">
+    <div class="grid-x">
         <div class="top-bar-title">
             <div data-responsive-toggle="responsive-menu" data-hide-for="medium" class="responsive-menu-toggler">
                 <button class="menu-icon dark" type="button" data-toggle></button>
@@ -47,7 +47,7 @@
         </div>
 
         <div id="responsive-menu">
-            <div class="row">
+            <div class="grid-x grid-margin-x">
                 <div class="top-bar-left">
                     <ul class="menu" data-responsive-menu="drilldown medium-dropdown">
                         <li>
@@ -75,6 +75,10 @@
 <main></main>
 
 <div id="loader"></div>
+
+<footer>
+
+</footer>
 
 <script src="/bower_components/jquery/dist/jquery.js"></script>
 <script src="/bower_components/what-input/dist/what-input.js"></script>
