Add examples & update foundation-select

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 <script src="/bower_components/spin.js/jquery.spin.js"></script>
 <script src="/bower_components/foundation-sites/dist/js/foundation.min.js"></script>
 <script src="/bower_components/foundation-perfect-scrollbar/dist/js/foundation.perfectScrollbar.min.js"></script>
-<script src="/bower_components/foundation-select/dist/js/foundation.select.min.js"></script>
+<script src="/bower_components/foundation-select/dist/js/foundation.select.js"></script>
 <script src="/js/vendor/highlight/highlight.pack.js"></script>
 <script src="/js/vendor/jquery.queryString.js"></script>
 <script src="/js/vendor/jquery.delimitedString.js"></script>
