--- a/index.html
+++ b/index.html
@@ -16,29 +16,7 @@
 </head>
 <body>
 
-<header>
-    <div class="title-bar" data-responsive-toggle="main-menu" data-hide-for="medium">
-        <div class="title-bar-logo">
-            <a href="/" title="Home" rel="home">
-                <img src="/themes/akkoo/assets/img/logos/akkoo-geel-enkel-logo.svg">
-            </a>
-        </div>
-        <button class="menu-icon" type="button" data-toggle="main-menu"></button>
-    </div>
-
-    <div data-ps-dynamic-container>
-        <div class="top-bar" id="main-menu" data-perfect-scrollbar data-suppress-scroll-x="true" data-scroll-y-margin-offset="1">
-            <div class="row column">
-                <div class="top-bar-left show-for-medium">
-
-                </div>
-            </div>
-        </div>
-    </div>
-</header>
-
 <div class="top-bar">
-    <div class="grid-x">
         <div class="top-bar-title">
             <div data-responsive-toggle="responsive-menu" data-hide-for="medium" class="responsive-menu-toggler">
                 <button class="menu-icon dark" type="button" data-toggle></button>
@@ -48,28 +26,45 @@
 
         <div id="responsive-menu">
             <div class="grid-x grid-margin-x">
-                <div class="top-bar-left">
-                    <ul class="menu" data-responsive-menu="drilldown medium-dropdown">
-                        <li>
-                            <a href="/foundation-plugins/select">Foundation Select</a>
-                            <!--<ul class="vertical menu">-->
+                <div class="cell auto">
+                    <div class="top-bar-left">
+                        <ul class="menu" data-responsive-menu="drilldown medium-dropdown">
+                            <li>
+                                <a href="/foundation-plugins/select">Foundation Select</a>
+                                <!--<ul class="vertical menu">-->
                                 <!--<li>-->
-                                    <!--<a href="/foundation-plugins/select">Select</a>-->
+                                <!--<a href="/foundation-plugins/select">Select</a>-->
                                 <!--</li>-->
                                 <!--<li>-->
-                                    <!--<a href="/foundation-plugins/perfect-scrollbar">Perfect scrollbar</a>-->
+                                <!--<a href="/foundation-plugins/perfect-scrollbar">Perfect scrollbar</a>-->
                                 <!--</li>-->
-                            <!--</ul>-->
-                        </li>
-                    </ul>
+                                <!--</ul>-->
+                            </li>
+                        </ul>
+                    </div>
                 </div>
-                <div class="top-bar-right">
-                    <ul class="vertical medium-horizontal menu">
-                    </ul>
+                <div class="cell shrink">
+                    <div class="top-bar-right">
+                        <ul class="vertical medium-horizontal menu" data-responsive-menu="drilldown medium-dropdown">
+                            <li>
+                                <a href="/cv/nl">CV</a>
+                                <!--<ul class="vertical menu">-->
+                                    <!--<li>-->
+                                    <!--<a href="/cv/en">EN</a>-->
+                                    <!--</li>-->
+                                    <!--<li>-->
+                                        <!--<a href="/cv/nl">NL</a>-->
+                                    <!--</li>-->
+                                    <!--<li>-->
+                                    <!--<a href="/cv/fr">FR</a>-->
+                                    <!--</li>-->
+                                <!--</ul>-->
+                            </li>
+                        </ul>
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
 </div>
 
 <main></main>
